--- a/Framework_1.0/pom.xml
+++ b/Framework_1.0/pom.xml
@@ -3,4 +3,29 @@
   <groupId>Framework</groupId>
   <artifactId>Framework_1.0</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+<dependencies>
+<dependency>
+	<groupId>org.apache.poi</groupId>
+	<artifactId>poi-ooxml</artifactId>
+	<version>3.12</version>
+</dependency>
+
+
+
+</dependencies>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </project>
